# DesktopMarkdownViewer

./: .gitignore  README.md
src/: index.html  sample.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/assets/css/: iframe.css  style.css
src/assets/js/: main.js  updater.js
